[tool.poetry]
name = "db-api"
version = "0.1.0"
description = ""
authors = ["Santo K Thomas"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.8.2"
sqlmodel = "^0.0.20"
pandas = "^2.2.2"
sqlalchemy = "^2.0.31"
uvicorn = "^0.30.1"
fastapi = "^0.111.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
